--- a/src/Home.css
+++ b/src/Home.css
@@ -1,3 +1,18 @@
+.home{
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1500px;
+}
+
+.home__row{
+  display: flex;
+  z-index: 1;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 .home__image{
   width: 100%;
   z-index:-1; /*Because the image has a z-index of -1, it will be placed behind all text and boxes  */
@@ -5,7 +20,5 @@
   mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
 }
 
-.home__container{
 
-}
 
