added images to all the products

--- a/src/Product.css
+++ b/src/Product.css
@@ -12,6 +12,11 @@
     z-index: 1;
 }
 
+.product__rating{
+  display: flex;
+  flex-direction: row; 
+}
+
 .product > img {
   max-height: 200px;
   width: 100%;
