--- a/src/Product.css
+++ b/src/Product.css
@@ -12,6 +12,21 @@
     z-index: 1;
 }
 
+.product:hover{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 10px;
+    padding: 20px;
+    width: 100%;
+    max-height: 400px;
+    min-width: 100px;
+    background-color: rgb(245, 240, 240);
+    z-index: 1;
+}
+
+
 .product__rating{
   display: flex;
   flex-direction: row; 
