--- a/src/Header.css
+++ b/src/Header.css
@@ -70,17 +70,22 @@
   margin-right: 10px;
   color: white;
 }
-
-/* .dropdown-content {
+/* 
+.dropdown-content {
   display: none;
   position: absolute;
   background-color: black;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 20px 20px;
-  z-index: 1;
-  margin-right: 500px;
+  max-width: 100%;
+  padding: 10px;
+  
 }
 
 .header__optionBasket:hover .dropdown-content {
   display: block;
+  min-width: 160px;
+  top: 43px;
+  right: 0;
+  width: 200px;
+  height: 100px;
 } */
