--- a/src/Product.css
+++ b/src/Product.css
@@ -22,7 +22,8 @@
     width: 100%;
     max-height: 400px;
     min-width: 100px;
-    background-color: rgb(245, 240, 240);
+    /* background-color: rgb(245, 240, 240); */
+box-shadow: 0 5px 15px 2px rgba(0, 0, 0, 0.1);
     z-index: 1;
 }
 
@@ -45,6 +46,7 @@
   margin-top: 10px;
   border-color: #a88734 #9c7e31 #846a29;
   color: #111;
+  cursor: pointer;
 }
 
 .product__price{
