added a hover affect to the navbar items

--- a/src/Header.css
+++ b/src/Header.css
@@ -44,6 +44,7 @@
   font-weight: 800;
 }
 
+
 .header__optionBasket{
   display: flex;
   align-items: center;
@@ -69,6 +70,16 @@
   margin-left: 10px;
   margin-right: 10px;
   color: white;
+}
+
+.header__option:hover{
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: #cd9042;
+  cursor: pointer;
+  
 }
 /* 
 .dropdown-content {
