--- a/src/Header.css
+++ b/src/Header.css
@@ -81,11 +81,12 @@
   cursor: pointer;
   
 }
-/* 
+
+/* this is the box that shows the total when you hover over the checkout tab*/
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: black;
+  background-color: #cd9042;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   max-width: 100%;
   padding: 10px;
@@ -98,5 +99,5 @@
   top: 43px;
   right: 0;
   width: 200px;
-  height: 100px;
-} */
+  height: 50px;
+}
