--- a/src/Home.css
+++ b/src/Home.css
@@ -1,4 +1,4 @@
-.home{
+.home {
   display: flex;
   justify-content: center;
   margin-left: auto;
@@ -6,19 +6,16 @@
   max-width: 1500px;
 }
 
-.home__row{
+.home__row {
   display: flex;
   z-index: 1;
   margin-left: 5px;
   margin-right: 5px;
 }
 
-.home__image{
+.home__image {
   width: 100%;
-  z-index:-1; /*Because the image has a z-index of -1, it will be placed behind all text and boxes  */
+  z-index: -1;
   margin-bottom: -150px;
-  mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
-
-
-
